# FGOALS-g-cmor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
run/amip/r1i1p1f1/: namelist.amip.r1i1p1f1  submit.sh
run/amip/r2i1p1f1/: namelist.amip.r2i1p1f1  submit.sh
run/historical/r1i1p1f1/: namelist.historical.r1i1p1f1  submit.sh
run/lig127k/r1i1p1f1/: namelist.lig127k.r1i1p1f1  submit.sh
run/piControl/r1i1p1f1/: namelist.piControl.r1i1p1f1  submit.sh
src/: CMIP6_1pctCO2.json  CMIP6_abrupt-4xCO2.json  CMIP6_amip-hist.json  CMIP6_amip.json  CMIP6_hist-GHG.json  CMIP6_hist-aer.json  CMIP6_hist-nat.json  CMIP6_historical.json  CMIP6_lig127k.json  CMIP6_midHolocene.json  CMIP6_piControl.json  CMIP6_ssp119.json  CMIP6_ssp126.json  CMIP6_ssp245.json  CMIP6_ssp370.json  CMIP6_ssp434.json  CMIP6_ssp460.json  CMIP6_ssp534-over.json  CMIP6_ssp534.json  CMIP6_ssp585.json  calc_gamil_lat_bnds.F90  cmor_fgoals_g_mod.F90  const_mod.F90  convert_fgoals_g.F90  gamil_reader_mod.F90  gamil_vars.3hr.json  gamil_vars.6hr.json  gamil_vars.6hrLev.json  gamil_vars.6hrPlev.json  gamil_vars.6hrPlevPt.json  gamil_vars.Amon.json  gamil_vars.day.json  gamil_vars.fx.json  gamil_vars.json  interp_mod.F90  namelist.amip  namelist.piControl  namelist_mod.F90
