cmake_minimum_required(VERSION 2.8)

project(FGOALS-g-cmor LANGUAGES Fortran)

if (DEFINED ENV{NETCDF} AND (NOT DEFINED ENV{NETCDF_ROOT}))
  set(ENV{NETCDF_ROOT} $ENV{NETCDF})
endif ()
if (DEFINED ENV{NETCDF_ROOT})
  include_directories("$ENV{NETCDF_ROOT}/include")
  link_directories("$ENV{NETCDF_ROOT}/lib")
else ()
  find_package(PkgConfig)
  if (PKG_CONFIG_FOUND)
    pkg_search_module(NETCDF REQUIRED netcdf)
    if (NETCDF_FOUND)
      include_directories(${NETCDF_INCLUDEDIR})
      link_directories(${NETCDF_LIBDIR})
    else ()
      message(FATAL_ERROR "Pkg-config could not find netcdf library!")
    endif ()
  else ()
    message(FATAL_ERROR "Unable to find pkg-config library!")
  endif ()
endif ()

if (DEFINED ENV{UDUNITS} AND (NOT DEFINED ENV{UDUNITS_ROOT}))
  set(ENV{UDUNITS_ROOT} $ENV{UDUNITS})
endif ()
if (DEFINED ENV{UDUNITS_ROOT})
  include_directories("$ENV{UDUNITS_ROOT}/include")
  link_directories("$ENV{UDUNITS_ROOT}/lib")
else ()
  message(FATAL_ERROR "Unable to find UDUNITS library!")
endif ()

if (DEFINED ENV{UUID} AND (NOT DEFINED ENV{UUID_ROOT}))
  set(ENV{UUID_ROOT} $ENV{UUID})
endif ()
if (DEFINED ENV{UUID_ROOT})
  include_directories("$ENV{UUID_ROOT}/include")
  link_directories("$ENV{UUID_ROOT}/lib")
else ()
  message(FATAL_ERROR "Unable to find UUID library!")
endif ()

if (DEFINED ENV{CMOR} AND (NOT DEFINED ENV{CMOR_ROOT}))
  set(ENV{CMOR_ROOT} $ENV{CMOR})
endif ()
if (DEFINED ENV{CMOR_ROOT})
  include_directories("$ENV{CMOR_ROOT}/include")
  link_directories("$ENV{CMOR_ROOT}/lib")
else ()
  message(FATAL_ERROR "Unable to find CMOR library!")
endif ()

set(source_files
  src/cmor_fgoals_g_mod.F90
  src/convert_fgoals_g.F90
)

add_executable(convert_fgoals_g.exe ${source_files})
target_link_libraries(convert_fgoals_g.exe netcdf netcdff udunits2 uuid cmor)
